투표 버튼 추가, API 연결 함수 추가

--- a/app/src/main/res/layout/activity_view_topic_detail.xml
+++ b/app/src/main/res/layout/activity_view_topic_detail.xml
@@ -66,6 +66,12 @@
                             android:text="0표"
                             android:textColor="@color/white"/>
 
+                        <Button
+                            android:id="@+id/btnVote1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="투표하기" />
+
                     </LinearLayout>
 
                     <TextView
@@ -95,6 +101,11 @@
                             android:layout_height="wrap_content"
                             android:text="0표"
                             android:textColor="@color/white"/>
+                        <Button
+                            android:id="@+id/btnVote2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="투표하기" />
 
 
                     </LinearLayout>
